before Adaptive Layout

--- a/Gaz/index.html
+++ b/Gaz/index.html
@@ -10,6 +10,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,300&family=Russo+One&display=swap');
     </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+    </style>
 </head>
 
 <body>
@@ -229,6 +232,137 @@
                 <button class="button__order">
                     Заказать газ
                 </button>
+            </div>
+        </div>
+    </section>
+    <section class="reviews">
+        <div class="reviews__container">
+            <h2 class="reviews__ourclients">Отзывы наших клиентов</h2>
+
+            <div class="reviews__info">
+                <div class="reviews__item">
+                    <div><img class="reviews__arrowleft" src="assets/svg/arrowreviews.svg" alt=""></div>
+                    <div class="reviews__card">
+                        <div class="reviews__img"><img src="assets/images/reviews/firstreviews.png" alt=""></div>
+                        <div>
+                            <div class="reviews__username">Ольга И.</div>
+                            <div class="reviews__city">Красногорск</div>
+                            <div class="reviews__text">Я всегда боюсь газа , а особенно боюсь что он может взорваться,
+                                как же мне помог Андрей
+                                водитель-экспедитор показал что бояться тут нечего и самое главное моего присутствие
+                                даже не понадобится. Спасибо компании за то что они все закрыли этот вопрос под ключ.
+                            </div>
+                        </div>
+                    </div>
+                    <div><img class="reviews__arrowright" src="assets/svg/arrowreviews.svg" alt=""></div>
+                </div>
+                <div class="reviews__dots">
+                    <div class="dots dots__active"></div>
+                    <div class="dots"></div>
+                    <div class="dots"></div>
+                    <div class="dots"></div>
+                    <div class="dots"></div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section class="accordion">
+        <div class="accordion__container">
+            <h2 class="accordion__title">Ответы на часто задаваемые вопросы</h2>
+            <details class="accordion__details">
+                <summary class="accordion__article">Есть ли у вас инженеры в компании?</summary>
+                <p></p>
+            </details>
+            <details class="accordion__details">
+                <summary class="accordion__article">Делаете ли вы отчистку газгольдера?</summary>
+                <p></p>
+            </details>
+            <details class="accordion__details">
+                <summary class="accordion__article">А вы не испортите газон у меня и соседей?</summary>
+                <p class="accordion__text">За счёт длинны в 50 м. делаем заправку не заезжая и не портим газон, а так же
+                    не мешаем соседям</p>
+            </details>
+            <details class="accordion__details">
+                <summary class="accordion__article">Вы предоставляете документы для субсидий?</summary>
+                <p></p>
+            </details>
+            <details class="accordion__details">
+                <summary class="accordion__article">Смогу ли я заказать во время праздников?</summary>
+                <p></p>
+            </details>
+        </div>
+    </section>
+    <section class="askcompany">
+        <div class="askcompany_container">
+            <div class="askcompany__first">
+                <div class="askcompany__form">
+                    <h2 class="askcompany__title">Не нашли ответа на свой вопрос задайте их нашему специалисту</h2>
+                    <div>
+                        <form class="ask__form" action="">
+                            <input class="input__standart" placeholder="Имя" type="text">
+                            <input class="input__standart" placeholder="Телефон" type="tel">
+                            <textarea class="input__ask" placeholder="Ваш вопрос" name="" id="" cols="30"
+                                rows="10"></textarea>
+                        </form>
+                    </div>
+                    <button class="button__ask">Задать вопрос</button>
+                </div>
+                <div class="askcompany__right">
+                    <div><img src="assets/images/askcompany/romantik.png" alt=""></div>
+                    <div class="cutaway">
+                        <h3 class="cutaway__username">Роман Ш.</h3>
+                        <p class="cutaway__prof">Старший менеджер</p>
+                    </div>
+                </div>
+            </div>
+            <div class="askcompany__second">
+                <div class="partners__company"><img class="img__partners"
+                        src="assets/images/askcompany/parners/patners1.png" alt=""></div>
+                <div class="partners__company"><img class="img__partners"
+                        src="assets/images/askcompany/parners/patners2.png" alt=""></div>
+                <div class="partners__company"><img class="img__partners"
+                        src="assets/images/askcompany/parners/patners3.png" alt=""></div>
+                <div class="partners__company"><img class="img__partners"
+                        src="assets/images/askcompany/parners/patners4.png" alt=""></div>
+                <div class="partners__company"><img class="img__partners"
+                        src="assets/images/askcompany/parners/patners5.png" alt=""></div>
+                <div class="partners__company"><img class="img__partners"
+                        src="assets/images/askcompany/parners/patners6.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footer__container">
+            <h2 class="footer__article">Закажи прямо сейчас и получи
+                бесплатную установку телеметрии</h2>
+            <div class="button__containerfooter">
+                <button class="button__footer">Заказать газ</button>
+            </div>
+            <div class="footer__card">
+                <div class="footer__cardinfo">
+                    <div class="footer__visit">Посетите наш уютный офис</div>
+                    <div class="footer__visittext">где мы сможем вас полностью
+                        проконсультировать по всем вопросам</div>
+                    <div class="footer__office">
+                        <h4 class="footer__officearticle">Офис</h4>
+                        <p class="footer__officetext">Видное , Белокаменное шоссе, 20</p>
+                    </div>
+                    <div class="footer__tel">
+                        <h4 class="footer__telarticle">Телефон:</h4>
+                        <p class="footer__teltext">+7 926 330-68-34</p>
+                    </div>
+                </div>
+                <div class="footer__maps">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d944.9191071420144!2d37.725069432801234!3d55.71664313350506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab5181d35a46b%3A0xdc800980123c3a57!2z0KHQuNC90LDRgCDQntCe0J4!5e0!3m2!1sru!2sru!4v1671435474953!5m2!1sru!2sru"
+                        class="footer__googlemaps" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+            <div class="footer__policy">
+                <div class="footer__policyarticle">Политика конфиденциальности</div>
+                <div class="footer__policydata">Согласие на обработку персональных данных</div>
             </div>
         </div>
     </section>
