--- a/Gaz/index.html
+++ b/Gaz/index.html
@@ -90,7 +90,7 @@
                 <p class="gaz__info">Физически испарение происходит до -40 градусов, что позволяет использовать его в
                     наших с вами
                     погодных условиях </p>
-                <button class="button__gaz">Заказать</button>
+                <div class="button__mob"><button class="button__gaz">Заказать</button></div>
             </div>
             <div class="infoprice__second">
                 <p class="perfect__ration">Идеальное соотношение</p>
@@ -105,14 +105,14 @@
                         <p class="ration__gaz">Бутан</p>
                     </div>
                 </div>
-                <img src="assets/images/proportions 1.png" alt="">
+                <div class="track__balon"><img src="assets/images/proportions 1.png" alt=""></div>
             </div>
             <div class="infoprice__third">
                 <p class="gaz">Бутан</p>
                 <p class="gaz__price">от 16 рублей за литр</p>
                 <p class="gaz__info">Испарение Бутана происходит только до 0 градусов и годится для использования в
                     тёплое время года </p>
-                <button class="button__gaz">Заказать</button>
+                <div class="button__mob"><button class="button__gaz">Заказать</button></div>
             </div>
         </div>
         <div class="container arrow">
@@ -186,10 +186,10 @@
     </section>
     <section class="guarantee">
         <div class="gurantee__container">
-            <div>
+            <div class="gurantee__left">
                 <img src="assets/images/guarantee.png" alt="">
             </div>
-            <div>
+            <div class="gurantee__right">
                 <h3 class="guarantee__text">
                     Благодаря нашему собственному автопарку мы можем
                     давать гарантию, что доставим <span class="gurantee__blue">за 4 часа</span>
@@ -208,7 +208,7 @@
                     Выберите свой объём Газовоза
                 </h2>
             </div>
-            <div>
+            <div class="choicevolum__choice">
                 <button class="choicevolume__button choicevolume__button--active">
                     Малый <br>
                     2000 л.
@@ -306,10 +306,10 @@
                                 rows="10"></textarea>
                         </form>
                     </div>
-                    <button class="button__ask">Задать вопрос</button>
+                    <div class="ask__buttoncontainer"><button class="button__ask">Задать вопрос</button></div>
                 </div>
                 <div class="askcompany__right">
-                    <div><img src="assets/images/askcompany/romantik.png" alt=""></div>
+                    <div class="askcompany__employee"><img src="assets/images/askcompany/romantik.png" alt=""></div>
                     <div class="cutaway">
                         <h3 class="cutaway__username">Роман Ш.</h3>
                         <p class="cutaway__prof">Старший менеджер</p>
